# schedview

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  container_environment.yaml  docker_entrypoint.sh  environment.yaml  environment_080a2.yaml  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: build_container.yaml  build_docs.yaml  build_pypi.yaml  cache.yaml  cleanup_cache.yaml  python_tests.yaml  ruff.yaml  test_and_build.yaml
ci/conda/: Jenkinsfile_schedview.conda
design/SP-3225/: designtest.rst  linktablestats.rst  smallsum.md  smallsum.rst  visitcache.md  visitcache.rst
devel_plan/: task.md  tlbuilder.md
docs/: api.rst  architecture.rst  conf.py  documenteer.toml  examples.rst  index.rst  installation.rst  introduction.rst  playwright_testing.rst  prenight_sim_generation.rst  reports.rst  tutorials.rst  usage.rst
notebooks/: architecture.ipynb  custom_plot.json  footprint_polygons.ipynb  introduction.ipynb  make_test_schedulers.ipynb  prenight.ipynb  prenight_matplotlib_extension.ipynb  prenight_multielement_extension.ipynb  prenight_rewardplot.ipynb  scheduler.ipynb  sim_archive.ipynb  spheremap.ipynb  visit_skymaps.ipynb
schedview/: __init__.py  clientsite.py  dayobs.py  param.py  reports.py  sphere.py  util.py  version.py
schedview/app/: metric_maps.py  obs_version_at_time.py  prenight_inventory.py  sched_maps.py  scheduler_config_at_time.py  start.py
tests/: conftest.py  test_collect_opsim.py  test_collect_visits_cache.py  test_compute_astro.py  test_compute_comparesim.py  test_compute_maf.py  test_compute_scheduler.py  test_compute_smallsum.py  test_compute_survey.py  test_compute_visits.py  test_consdb.py  test_dayobs.py  test_design_docs.py  test_efd.py  test_examples.py  test_footprint.py  test_html.py  test_lfa_scheduler_dashboard.py  test_log_examples.py  test_maf_metrics.py  test_metric_maps.py  test_multisim.py  test_nightly.py  test_nightreport.py  test_observatory_state.py  test_overhead.py  test_plot_cadence.py  test_plot_comparesim.py  test_plot_monthlyhg.py  test_plot_mplutils.py  test_plot_rewards.py  test_plot_survey.py  test_plot_survey_mpl.py  test_plot_survey_skyproj.py  test_plot_util.py  test_plot_visit_skymaps.py  test_plot_visits.py  test_prenight.py  test_prenight_inventory.py  test_readjs.py  (+16 more)
util/: efd_sched.py  split_skybrightness.py
(+148 files in other folders)
