[build-system]
requires = [ "setuptools", "setuptools_scm<8.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "schedview"
description = "Tools for visualization of Rubin Observatory's scheduler status, strategy and progress on LSST."
readme = "README.md"
authors = [
    {name="Eric Neilsen"},
    {name="Lynne Jones"},
    {name="Eman Ali"},
    {name="Alice Serene"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
 ]
urls = {documentation = "https://schedview.lsst.io", repository = "https://github.com/lsst/schedview"}
dynamic = [ "version" ]
dependencies = [
    "numpy",
    "pandas",
    "pytz",
    "param",
    "holoviews",
    "hvplot",
    "astropy >= 5.3",
    "healpy",
    "uranography >= 1.1.0 ",
    "rubin-sim >= 1.3.0",
    "bokeh >= 3.1.1",
    "panel >= 1.1.0",
    "colorcet",
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "ruff",
    "pytest-cov",
    "pytest-black",
]
dev = [
  "documenteer[pipelines]",
]

[project.scripts]
prenight = "schedview.app.prenight.prenight:main"
scheduler_dashboard = "schedview.app.scheduler_dashboard.scheduler_dashboard:main"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "" ]

[tool.setuptools_scm]
write_to = "schedview/version.py"
write_to_template = """
# Generated by setuptools_scm
__all__ = ["__version__"]
__version__ = "{version}"
"""

[tool.pytest.ini_options]
addopts = "--black --ignore-glob=*/version.py --ignore-glob=*data_dir/*"
testpaths = "."

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
exclude = [
    "__init__.py",
]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N813",
    "N815",
    "N816",
]
line-length = 110
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "N",  # pep8-naming
    "W",  # pycodestyle
]
target-version = "py311"
extend-select = [
    "RUF100", # Warn about unused noqa
]

[tool.ruff.pycodestyle]
max-doc-length = 79

[tool.ruff.pydocstyle]
convention = "numpy"
